--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "DB_FILE=db.sqlite COOKIE_SECRET=abc nodemon src/index.js",
     "seed": "DB_FILE=db.sqlite node src/database/seed.js",
     "test:1": "DB_FILE=test.sqlite COOKIE_SECRET=abc node --no-warnings test/1.test.js",
-    "test:2": "DB_FILE=test.sqlite COOKIE_SECRET=abc node --no-warnings test/2.test.js"
+    "test:2": "DB_FILE=test.sqlite COOKIE_SECRET=abc node --no-warnings test/2.test.js",
+    "test:3": "DB_FILE=test.sqlite COOKIE_SECRET=abc node --no-warnings test/3.test.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
