--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
     "start": "node src/index.js",
     "dev": "DB_FILE=db.sqlite COOKIE_SECRET=abc nodemon src/index.js",
     "seed": "DB_FILE=db.sqlite node src/database/seed.js",
-    "test:1": "DB_FILE=test.sqlite COOKIE_SECRET=abc node --no-warnings test/1.test.js",
-    "test:2": "DB_FILE=test.sqlite COOKIE_SECRET=abc node --no-warnings test/2.test.js",
-    "test:3": "DB_FILE=test.sqlite COOKIE_SECRET=abc node --no-warnings test/3.test.js",
-    "test:4": "DB_FILE=test.sqlite COOKIE_SECRET=abc node --no-warnings test/4.test.js",
-    "test:5": "DB_FILE=test.sqlite COOKIE_SECRET=abc node --no-warnings test/5.test.js",
-    "test:6": "DB_FILE=test.sqlite COOKIE_SECRET=abc node --no-warnings test/6.test.js"
+    "windows-dev": "SET DB_FILE=db.sqlite & SET COOKIE_SECRET=abc & nodemon src/index.js",
+    "windows-seed": "SET DB_FILE=db.sqlite & node src/database/seed.js",
+    "test:1": "SET DB_FILE=test.sqlite & SET COOKIE_SECRET=abc & node --no-warnings test/1.test.js",
+    "test:2": "SET DB_FILE=test.sqlite & SET COOKIE_SECRET=abc & node --no-warnings test/2.test.js",
+    "test:3": "SET DB_FILE=test.sqlite & SET COOKIE_SECRET=abc & node --no-warnings test/3.test.js",
+    "test:4": "SET DB_FILE=test.sqlite & SET COOKIE_SECRET=abc & node --no-warnings test/4.test.js",
+    "test:5": "SET DB_FILE=test.sqlite & SET COOKIE_SECRET=abc & node --no-warnings test/5.test.js",
+    "test:6": "SET DB_FILE=test.sqlite & SET COOKIE_SECRET=abc & node --no-warnings test/6.test.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
